--- a/build.gradle
+++ b/build.gradle
@@ -17,15 +17,7 @@ repositories {
 }
 
 dependencies {
-	implementation ('org.springframework.boot:spring-boot-starter-web') {
-//		exclude group: 'org.springframework.boot', module: 'spring-boot-starter-tomcat'
-	}
-//	implementation 'org.springframework.boot:spring-boot-starter-jetty'
-	implementation ('org.springframework:spring-jdbc')
-
-	// Database
-	runtimeOnly ('com.h2database:h2:2.1.214')
-	implementation 'hikari-cp:hikari-cp:3.0.1'
+	implementation ('org.springframework.boot:spring-boot-starter')
 
 	testImplementation 'org.springframework.boot:spring-boot-starter-test'
 }
